# jp-med-dict

./: .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml  schema.sql
.github/workflows/: monthly-update.yml
context/: log.md
docs/: plan.md
normalizer/: __init__.py  dedupe.py  kana.py  link.py
sources/: __init__.py  dpc_shobyomei.py  ippanmei.py  manbyo.py  pmda_attachment.py  yakkakijun.py
tests/: test_normalizer.py  test_row_counts.py  test_schema.py
