[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jp-med-dict"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "requests>=2.31",
  "lxml>=4.9",
  "beautifulsoup4>=4.12",
  "jaconv>=0.3",
  "zstandard>=0.22",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sources", "sources.*", "normalizer", "normalizer.*", "build", "build.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
